[gd_scene load_steps=14 format=3 uid="uid://bx2ov2sv7h0q0"]

[ext_resource type="Script" uid="uid://c25l2c3djphnx" path="res://resources/buildings/city.gd" id="1_vgvu4"]
[ext_resource type="Script" uid="uid://ccriiwtes1i48" path="res://resources/collectible_resource.gd" id="3_aigao"]
[ext_resource type="PackedScene" uid="uid://dgo07mr2aq1ys" path="res://resources/buildings/stock_pile.tscn" id="3_cofpr"]
[ext_resource type="PackedScene" uid="uid://ca3qgsc7fa08u" path="res://resources/generators/king_convert.tscn" id="4_8prh0"]
[ext_resource type="Texture2D" uid="uid://dteeqtomkve4" path="res://assets/Wood.png" id="4_dklla"]
[ext_resource type="PackedScene" uid="uid://jlp2kdp37ndb" path="res://resources/generators/weapon_rack.tscn" id="5_04ykx"]
[ext_resource type="Texture2D" uid="uid://cvxgjdnf4ic5e" path="res://assets/Worm.png" id="5_bbxje"]
[ext_resource type="PackedScene" uid="uid://cfu1phpk1aprv" path="res://resources/fare.tscn" id="5_i25wv"]
[ext_resource type="Texture2D" uid="uid://bb8n2voct7ge7" path="res://assets/Stone.png" id="6_g8mkc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0b4ue"]
size = Vector2(507, 365)

[sub_resource type="Resource" id="Resource_c0mwd"]
resource_local_to_scene = true
script = ExtResource("3_aigao")
texture = ExtResource("4_dklla")
metadata/_custom_type_script = "uid://ccriiwtes1i48"

[sub_resource type="Resource" id="Resource_7aus8"]
resource_local_to_scene = true
script = ExtResource("3_aigao")
type = 2
texture = ExtResource("5_bbxje")
metadata/_custom_type_script = "uid://ccriiwtes1i48"

[sub_resource type="Resource" id="Resource_2gnrm"]
resource_local_to_scene = true
script = ExtResource("3_aigao")
type = 1
texture = ExtResource("6_g8mkc")
metadata/_custom_type_script = "uid://ccriiwtes1i48"

[node name="City" type="Area2D"]
collision_layer = 256
collision_mask = 20
script = ExtResource("1_vgvu4")
inner_color_converted = Color(0.24705882, 0.43137255, 0.8, 1)
outer_color_converted = Color(0.88235295, 0.8039216, 0.15686275, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(226.5, -185.5)
shape = SubResource("RectangleShape2D_0b4ue")

[node name="Polygon2D2" type="Polygon2D" parent="."]
unique_name_in_owner = true
position = Vector2(-5.8877873, 3.792085)
scale = Vector2(1.0264026, 1.0264026)
polygon = PackedVector2Array(-0.10925293, -29.025726, -0.10925293, -194.65273, 129.46945, -194.65274, 129.46948, -285.26044, 181.10608, -285.26044, 181.10608, -333, 251.25403, -333, 251.25403, -284.2862, 303.865, -284.2862, 303.865, -194.65273, 445.13513, -194.65273, 445.13513, -29.025726)

[node name="Polygon2D" type="Polygon2D" parent="."]
unique_name_in_owner = true
polygon = PackedVector2Array(1, -30, 1, -190, 133, -190, 133, -283, 185, -283, 185, -333, 246, -333, 246, -283, 300, -283, 300, -191, 446, -191, 446, -30)

[node name="StockPile" parent="." instance=ExtResource("3_cofpr")]
position = Vector2(-1560, -926)
stock = Array[ExtResource("3_aigao")]([SubResource("Resource_c0mwd"), SubResource("Resource_7aus8"), SubResource("Resource_2gnrm")])

[node name="KingConvert" parent="." instance=ExtResource("4_8prh0")]
position = Vector2(233, -1398)

[node name="WeaponRack" parent="." instance=ExtResource("5_04ykx")]
position = Vector2(1684, -1159)

[node name="CaptureFare" parent="." instance=ExtResource("5_i25wv")]
position = Vector2(215, -561)
one_time_pay = true
enabled = null
allow_partial_payment = true
required_food = null
required_wood = null
required_stone = null
required_minions = 5
exchange_amount = null

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="activated" from="KingConvert" to="." method="_on_king_convert_activated"]
[connection signal="paid" from="CaptureFare" to="." method="_on_capture_fare_paid"]
